proj_anc/system/WaveGenerator1/WaveGenerator1.cydsn/CortexM3/ARM_GCC_484/Debug/REBUILD.log
--------------- Rebuild Started: 07/16/2015 19:45:10 Project: WaveGenerator1, Configuration: ARM GCC 4.8.4 Debug ---------------
Deleting file ".\CortexM3\ARM_GCC_484\Debug\main.o"
Deleting file ".\CortexM3\ARM_GCC_484\Debug\canceller.o"
Deleting file ".\CortexM3\ARM_GCC_484\Debug\hs_model.o"
Deleting file ".\CortexM3\ARM_GCC_484\Debug\mic_model.o"
Deleting file ".\CortexM3\ARM_GCC_484\Debug\cyfitter_cfg.o"
Deleting file ".\CortexM3\ARM_GCC_484\Debug\cymetadata.o"
Deleting file ".\CortexM3\ARM_GCC_484\Debug\Cm3Start.o"
Deleting file ".\CortexM3\ARM_GCC_484\Debug\CyBootAsmGnu.o"
Deleting file ".\CortexM3\ARM_GCC_484\Debug\CyDmac.o"
Deleting file ".\CortexM3\ARM_GCC_484\Debug\CyFlash.o"
Deleting file ".\CortexM3\ARM_GCC_484\Debug\CyLib.o"
Deleting file ".\CortexM3\ARM_GCC_484\Debug\cyPm.o"
Deleting file ".\CortexM3\ARM_GCC_484\Debug\CySpc.o"
Deleting file ".\CortexM3\ARM_GCC_484\Debug\cyutils.o"
Deleting file ".\CortexM3\ARM_GCC_484\Debug\Pin_1.o"
Deleting file ".\CortexM3\ARM_GCC_484\Debug\isr.o"
Deleting file ".\CortexM3\ARM_GCC_484\Debug\Clock.o"
Deleting file ".\CortexM3\ARM_GCC_484\Debug\Pin_2.o"
Deleting file ".\CortexM3\ARM_GCC_484\Debug\ADC_SAR.o"
Deleting file ".\CortexM3\ARM_GCC_484\Debug\ADC_SAR_INT.o"
Deleting file ".\CortexM3\ARM_GCC_484\Debug\ADC_SAR_PM.o"
Deleting file ".\CortexM3\ARM_GCC_484\Debug\ADC_SAR_IRQ.o"
Deleting file ".\CortexM3\ARM_GCC_484\Debug\ADC_SAR_theACLK.o"
Deleting file ".\CortexM3\ARM_GCC_484\Debug\Pin_4.o"
Deleting file ".\CortexM3\ARM_GCC_484\Debug\VDAC8_1_hs.o"
Deleting file ".\CortexM3\ARM_GCC_484\Debug\VDAC8_1_hs_PM.o"
Deleting file ".\CortexM3\ARM_GCC_484\Debug\VDAC8_2_ls.o"
Deleting file ".\CortexM3\ARM_GCC_484\Debug\VDAC8_2_ls_PM.o"
Deleting file ".\CortexM3\ARM_GCC_484\Debug\UART_1.o"
Deleting file ".\CortexM3\ARM_GCC_484\Debug\UART_1_PM.o"
Deleting file ".\CortexM3\ARM_GCC_484\Debug\UART_1_INT.o"
Deleting file ".\CortexM3\ARM_GCC_484\Debug\UART_1_BOOT.o"
Deleting file ".\CortexM3\ARM_GCC_484\Debug\UART_1_IntClock.o"
Deleting file ".\CortexM3\ARM_GCC_484\Debug\SW3.o"
Deleting file ".\CortexM3\ARM_GCC_484\Debug\WaveGenerator1.hex"
Deleting file ".\CortexM3\ARM_GCC_484\Debug\WaveGenerator1.elf"
Deleting file ".\CortexM3\ARM_GCC_484\Debug\WaveGenerator1.map"
Deleting file ".\WaveGenerator1.cycdx"
Deleting file ".\WaveGenerator1.svd"
Deleting file ".\WaveGenerator1.rpt"
Deleting file ".\WaveGenerator1_timing.html"
Deleting file ".\CortexM3\ARM_GCC_484\Debug\.deps\C_FILE.P"
Deleting file ".\CortexM3\ARM_GCC_484\Debug\.deps\ARM_C_FILE.P"
Deleting file ".\CortexM3\ARM_GCC_484\Debug\.deps\GNU_ARM_ASM_FILE.P"
cydsfit.exe -.appdatapath "C:\Users\pearlstl\AppData\Local\Cypress Semiconductor\PSoC Creator\3.2" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -p C:\Users\pearlstl\Documents\MUSE-Research\proj_anc\system\WaveGenerator1\WaveGenerator1.cydsn\WaveGenerator1.cyprj -d CY8C5868AXI-LP035 -s C:\Users\pearlstl\Documents\MUSE-Research\proj_anc\system\WaveGenerator1\WaveGenerator1.cydsn\Generated_Source\PSoC5 -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
HDL Generation ...
Synthesis ...
Place and Route ...
Tech mapping ...
Analog Placement ...
Log: apr.M0058: The analog placement iterative improvement is 33% done. (App=cydsfit)
Log: apr.M0058: The analog placement iterative improvement is 58% done. (App=cydsfit)
Analog Routing ...
Analog Code Generation ...
Digital Placement ...
Digital Routing ...
Bitstream Generation ...
Static timing analysis ...
API Generation ...
Dependency Generation ...
Clean Temporary Files ...
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -Wno-main -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_484\Debug/main.lst -g -D DEBUG -Wall -ffunction-sections -O0 -c .\main.c -o .\CortexM3\ARM_GCC_484\Debug\main.o
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -Wno-main -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_484\Debug/canceller.lst -g -D DEBUG -Wall -ffunction-sections -O0 -c .\canceller.c -o .\CortexM3\ARM_GCC_484\Debug\canceller.o
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -Wno-main -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_484\Debug/hs_model.lst -g -D DEBUG -Wall -ffunction-sections -O0 -c .\hs_model.c -o .\CortexM3\ARM_GCC_484\Debug\hs_model.o
.\hs_model.c: In function 'hs_model_new_sample':
.\hs_model.c:15:22: error: called object 'i' is not a function or function pointer
 #define FILTER_ORDER (16)
                      ^
.\hs_model.c:43:41: note: in expansion of macro 'FILTER_ORDER'
         sum += (recent_samps[(wptr - i  FILTER_ORDER) & FO1] * model_coeffs[i]);
                                         ^
.\hs_model.c:36:17: note: declared here
     int         i;
                 ^
In file included from .\hs_model.c:13:0:
.\hs_model.c: At top level:
.\hs_model_coeffs.h:4:12: warning: 'hs_model_coeffs' defined but not used [-Wunused-variable]
 static int hs_model_coeffs[]=
            ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Rebuild Failed: 07/16/2015 19:45:53 ---------------
